--- a/app/src/main/res/layout/tool_item.xml
+++ b/app/src/main/res/layout/tool_item.xml
@@ -41,12 +41,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="@{data.name}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/img_tool"
                 app:layout_constraintStart_toEndOf="@+id/img_tool"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Pliers" />
@@ -55,15 +55,14 @@
                 android:id="@+id/txt_tool_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="@{String.valueOf(data.count)}"
+                android:text="@{@string/total_count(data.count)}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_tool_name"
-                tools:text="11" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Total Item : 11" />
 
             <TextView
                 android:id="@+id/txt_rent_count"
@@ -71,15 +70,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="@{String.valueOf(data.rentCount)}"
+                android:text="@{@string/borrow_count(data.rentCount)}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_tool_count"
-                tools:text="4" />
+                tools:text="Borrowed : 4" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
